Added program execution rate interactable

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 A BrainF*ck interpreter with a small visualizer builtin, to show what the memory and loop stack looks like.
 
 This is really just a small test or proof of concept for a larger project where I want to visualize an abstraction for the CPU and how computers function.
+
+Link to GitHub pages: https://hadronical.github.io/BrainF-ck/
